@@ -49,8 +49,7 @@ import org.elasticsearch.xpack.esql.expression.function.scalar.string.regex.RLik
 import org.elasticsearch.xpack.esql.expression.function.scalar.string.regex.RLikeList;
 import org.elasticsearch.xpack.esql.expression.function.scalar.string.regex.WildcardLike;
 import org.elasticsearch.xpack.esql.expression.function.scalar.string.regex.WildcardLikeList;
-import org.elasticsearch.xpack.esql.expression.function.vector.CosineSimilarity;
-import org.elasticsearch.xpack.esql.expression.function.vector.DotProduct;
+import org.elasticsearch.xpack.esql.expression.function.vector.VectorSimilarityFunction;
 import org.elasticsearch.xpack.esql.expression.predicate.logical.And;
 import org.elasticsearch.xpack.esql.expression.predicate.nulls.IsNotNull;
 import org.elasticsearch.xpack.esql.expression.predicate.operator.arithmetic.Add;
@@ -82,10 +81,10 @@ import org.elasticsearch.xpack.esql.plan.logical.local.LocalRelation;
 import org.elasticsearch.xpack.esql.rule.RuleExecutor;
 import org.elasticsearch.xpack.esql.session.Configuration;
 import org.elasticsearch.xpack.esql.stats.SearchStats;
-import org.hamcrest.Matchers;
 import org.junit.BeforeClass;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -124,6 +123,7 @@ import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.hasItem;
 import static org.hamcrest.Matchers.hasItems;
 import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
@@ -232,7 +232,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         var alias = as(eval.fields().get(0), Alias.class);
         var literal = as(alias.child(), Literal.class);
         assertThat(literal.value(), is(nullValue()));
-        assertThat(literal.dataType(), is(DataType.KEYWORD));
+        assertThat(literal.dataType(), is(KEYWORD));
 
         var limit = as(eval.child(), Limit.class);
         var source = as(limit.child(), EsRelation.class);
@@ -265,7 +265,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         var alias = as(eval.fields().get(0), Alias.class);
         var literal = as(alias.child(), Literal.class);
         assertThat(literal.value(), is(new BytesRef("foo")));
-        assertThat(literal.dataType(), is(DataType.KEYWORD));
+        assertThat(literal.dataType(), is(KEYWORD));
 
         var limit = as(eval.child(), Limit.class);
         var source = as(limit.child(), EsRelation.class);
@@ -331,7 +331,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         assertEquals(eval.fields().size(), 1);
         var lastName = eval.fields().get(0);
         assertEquals(lastName.name(), "last_name");
-        assertEquals(lastName.child(), new Literal(EMPTY, null, DataType.KEYWORD));
+        assertEquals(lastName.child(), new Literal(EMPTY, null, KEYWORD));
         var limit2 = asLimit(eval.child(), 1000, false);
         var relation = as(limit2.child(), EsRelation.class);
         assertThat(Expressions.names(relation.output()), not(contains("last_name")));
@@ -386,11 +386,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
             new MockFieldAttributeCommand(
                 EMPTY,
                 new Row(EMPTY, List.of()),
-                new FieldAttribute(
-                    EMPTY,
-                    "last_name",
-                    new EsField("last_name", DataType.KEYWORD, Map.of(), true, EsField.TimeSeriesFieldType.NONE)
-                )
+                new FieldAttribute(EMPTY, "last_name", new EsField("last_name", KEYWORD, Map.of(), true, EsField.TimeSeriesFieldType.NONE))
             ),
             testStats
         );
@@ -423,7 +419,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
         assertThat(Expressions.names(eval.fields()), contains("last_name"));
         var literal = as(eval.fields().get(0), Alias.class);
-        assertEquals(literal.child(), new Literal(EMPTY, null, DataType.KEYWORD));
+        assertEquals(literal.child(), new Literal(EMPTY, null, KEYWORD));
         assertThat(Expressions.names(relation.output()), not(contains("last_name")));
 
         assertEquals(Expressions.names(initialRelation.output()), Expressions.names(project.output()));
@@ -454,7 +450,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         var alias = as(eval.fields().get(0), Alias.class);
         var literal = as(alias.child(), Literal.class);
         assertThat(literal.value(), is(nullValue()));
-        assertThat(literal.dataType(), is(DataType.INTEGER));
+        assertThat(literal.dataType(), is(INTEGER));
 
         var limit = as(eval.child(), Limit.class);
         var source = as(limit.child(), EsRelation.class);
@@ -544,7 +540,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         Map<String, EsField> large = Maps.newLinkedHashMapWithExpectedSize(size);
         for (int i = 0; i < size; i++) {
             var name = String.format(Locale.ROOT, "field%03d", i);
-            large.put(name, new EsField(name, DataType.INTEGER, emptyMap(), true, false, EsField.TimeSeriesFieldType.NONE));
+            large.put(name, new EsField(name, INTEGER, emptyMap(), true, false, EsField.TimeSeriesFieldType.NONE));
         }
 
         SearchStats searchStats = statsForExistingField("field000", "field001", "field002", "field003", "field004");
@@ -577,7 +573,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         var eval = as(project.child(), Eval.class);
         var field = eval.fields().get(0);
         assertThat(Expressions.name(field), is("field005"));
-        assertThat(Alias.unwrap(field).fold(FoldContext.small()), Matchers.nullValue());
+        assertThat(Alias.unwrap(field).fold(FoldContext.small()), nullValue());
     }
 
     // InferIsNotNull
@@ -921,11 +917,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         Alias eval1 = eval.fields().get(0);
         Literal literal1 = as(eval1.child(), Literal.class);
         assertNull(literal1.value());
-        assertThat(literal1.dataType(), is(DataType.KEYWORD));
+        assertThat(literal1.dataType(), is(KEYWORD));
         Alias eval2 = eval.fields().get(1);
         Literal literal2 = as(eval2.child(), Literal.class);
         assertNull(literal2.value());
-        assertThat(literal2.dataType(), is(DataType.KEYWORD));
+        assertThat(literal2.dataType(), is(KEYWORD));
         assertThat(grouping1.id(), equalTo(eval1.id()));
         assertThat(grouping2.id(), equalTo(eval2.id()));
         as(eval.child(), EsRelation.class);
@@ -996,8 +992,8 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
                     // We only want to apply it once, so we use a static counter
                     if (appliedCount.get() == 0) {
                         appliedCount.set(appliedCount.get() + 1);
-                        Literal additionalLiteral = new Literal(Source.EMPTY, "additional literal", INTEGER);
-                        return new Eval(plan.source(), plan, List.of(new Alias(Source.EMPTY, "additionalAttribute", additionalLiteral)));
+                        Literal additionalLiteral = new Literal(EMPTY, "additional literal", INTEGER);
+                        return new Eval(plan.source(), plan, List.of(new Alias(EMPTY, "additionalAttribute", additionalLiteral)));
                     }
                     return plan;
                 }
@@ -1117,17 +1113,18 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
      */
     public void testVectorFunctionsReplaced() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
+        SimilarityFunctionTestCase testCase = SimilarityFunctionTestCase.random("dense_vector");
+        String query = String.format(Locale.ROOT, """
             from test_all
-            | eval s = v_dot_product(dense_vector, [1.0, 2.0, 3.0])
-            """;
+            | eval s = %s
+            """, testCase.toQuery());
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), TEST_SEARCH_STATS);
 
         // EsqlProject[[!alias_integer, boolean{f}#7, byte{f}#8, ... s{r}#5]]
         var project = as(plan, EsqlProject.class);
         // Does not contain the extracted field
-        assertFalse(Expressions.names(project.projections()).stream().anyMatch(s -> s.startsWith("$$dense_vector$V_DOT_PRODUCT$")));
+        assertFalse(Expressions.names(project.projections()).stream().anyMatch(s -> s.startsWith(testCase.toFieldAttrName())));
 
         // Eval[[$$dense_vector$V_DOT_PRODUCT$27{f}#27 AS s#5]]
         var eval = as(project.child(), Eval.class);
@@ -1138,11 +1135,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         // Check replaced field attribute
         FieldAttribute fieldAttr = (FieldAttribute) alias.child();
         assertThat(fieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(fieldAttr.name(), startsWith("$$dense_vector$V_DOT_PRODUCT$"));
+        assertThat(fieldAttr.name(), startsWith(testCase.toFieldAttrName()));
         var field = as(fieldAttr.field(), FunctionEsField.class);
         var blockLoaderFunctionConfig = as(field.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(blockLoaderFunctionConfig.similarityFunction(), is(DotProduct.SIMILARITY_FUNCTION));
-        assertThat(blockLoaderFunctionConfig.vector(), equalTo(new float[] { 1.0f, 2.0f, 3.0f }));
+        assertThat(blockLoaderFunctionConfig.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(blockLoaderFunctionConfig.vector(), equalTo(testCase.vector()));
 
         // Limit[1000[INTEGER],false,false]
         var limit = as(eval.child(), Limit.class);
@@ -1162,13 +1159,14 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
      */
     public void testVectorFunctionsReplacedWithTopN() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
+        SimilarityFunctionTestCase testCase = SimilarityFunctionTestCase.random("dense_vector");
+        String query = String.format(Locale.ROOT, """
             from test_all
-            | eval s = v_dot_product(dense_vector, [1.0, 2.0, 3.0])
+            | eval s = %s
             | sort s desc
             | limit 1
             | keep s
-            """;
+            """, testCase.toQuery());
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), TEST_SEARCH_STATS);
 
@@ -1194,11 +1192,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         // Check replaced field attribute
         FieldAttribute fieldAttr = (FieldAttribute) alias.child();
         assertThat(fieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(fieldAttr.name(), startsWith("$$dense_vector$V_DOT_PRODUCT$"));
+        assertThat(fieldAttr.name(), startsWith(testCase.toFieldAttrName()));
         var field = as(fieldAttr.field(), FunctionEsField.class);
         var blockLoaderFunctionConfig = as(field.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(blockLoaderFunctionConfig.similarityFunction(), is(DotProduct.SIMILARITY_FUNCTION));
-        assertThat(blockLoaderFunctionConfig.vector(), equalTo(new float[] { 1.0f, 2.0f, 3.0f }));
+        assertThat(blockLoaderFunctionConfig.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(blockLoaderFunctionConfig.vector(), equalTo(testCase.vector()));
 
         // EsRelation[types]
         var esRelation = as(eval.child(), EsRelation.class);
@@ -1207,13 +1205,14 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
     public void testVectorFunctionsNotPushedDownWhenNotIndexed() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
+        SimilarityFunctionTestCase testCase = SimilarityFunctionTestCase.random("dense_vector");
+        String query = String.format(Locale.ROOT, """
             from test_all
-            | eval s = v_dot_product(dense_vector, [1.0, 2.0, 3.0])
+            | eval s = %s
             | sort s desc
             | limit 1
             | keep s
-            """;
+            """, testCase.toQuery());
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), new EsqlTestUtils.TestSearchStats() {
             @Override
@@ -1234,8 +1233,8 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         var alias = as(eval.fields().getFirst(), Alias.class);
         assertThat(alias.name(), equalTo("s"));
 
-        // Check similarly function field attribute is NOT replaced
-        as(alias.child(), DotProduct.class);
+        // Check similarity function field attribute is NOT replaced
+        as(alias.child(), VectorSimilarityFunction.class);
 
         // EsRelation does not contain a FunctionEsField
         var esRelation = as(eval.child(), EsRelation.class);
@@ -1248,13 +1247,14 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
     public void testVectorFunctionsWhenFieldMissing() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
+        SimilarityFunctionTestCase testCase = SimilarityFunctionTestCase.random("dense_vector");
+        String query = String.format(Locale.ROOT, """
             from test_all
-            | eval s = v_dot_product(dense_vector, [1.0, 2.0, 3.0])
+            | eval s = %s
             | sort s desc
             | limit 1
             | keep s
-            """;
+            """, testCase.toQuery());
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), new EsqlTestUtils.TestSearchStats() {
             @Override
@@ -1290,11 +1290,12 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
     public void testVectorFunctionsInWhere() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
+        SimilarityFunctionTestCase testCase = SimilarityFunctionTestCase.random("dense_vector");
+        String query = String.format(Locale.ROOT, """
             from test_all
-            | where v_dot_product(dense_vector, [1.0, 2.0, 3.0]) > 0.5
+            | where %s > 0.5
             | keep dense_vector
-            """;
+            """, testCase.toQuery());
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), TEST_SEARCH_STATS);
 
@@ -1309,11 +1310,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         // Check left side is the replaced field attribute
         var fieldAttr = as(greaterThan.left(), FieldAttribute.class);
         assertThat(fieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(fieldAttr.name(), startsWith("$$dense_vector$V_DOT_PRODUCT$"));
+        assertThat(fieldAttr.name(), startsWith(testCase.toFieldAttrName()));
         var field = as(fieldAttr.field(), FunctionEsField.class);
         var blockLoaderFunctionConfig = as(field.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(blockLoaderFunctionConfig.similarityFunction(), is(DotProduct.SIMILARITY_FUNCTION));
-        assertThat(blockLoaderFunctionConfig.vector(), equalTo(new float[] { 1.0f, 2.0f, 3.0f }));
+        assertThat(blockLoaderFunctionConfig.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(blockLoaderFunctionConfig.vector(), equalTo(testCase.vector()));
 
         // Check right side is 0.5
         var literal = as(greaterThan.right(), Literal.class);
@@ -1328,10 +1329,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
     public void testVectorFunctionsInStats() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
+        SimilarityFunctionTestCase testCase = SimilarityFunctionTestCase.random("dense_vector");
+        String query = String.format(Locale.ROOT, """
             from test_all
-            | stats count(*) where v_dot_product(dense_vector, [1.0, 2.0, 3.0]) > 0.5
-            """;
+            | stats count(*) where %s > 0.5
+            """, testCase.toQuery());
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), TEST_SEARCH_STATS);
 
@@ -1346,7 +1348,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
         // Check the Count aggregate with filter
         var countAlias = as(aggregate.aggregates().getFirst(), Alias.class);
-        var count = as(countAlias.child(), org.elasticsearch.xpack.esql.expression.function.aggregate.Count.class);
+        var count = as(countAlias.child(), Count.class);
 
         // Check the filter on the Count aggregate
         assertThat(count.filter(), equalTo(Literal.TRUE));
@@ -1358,11 +1360,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         // Check left side is the replaced field attribute
         var fieldAttr = as(filterCondition.left(), FieldAttribute.class);
         assertThat(fieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(fieldAttr.name(), startsWith("$$dense_vector$V_DOT_PRODUCT$"));
+        assertThat(fieldAttr.name(), startsWith(testCase.toFieldAttrName()));
         var field = as(fieldAttr.field(), FunctionEsField.class);
         var blockLoaderFunctionConfig = as(field.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(blockLoaderFunctionConfig.similarityFunction(), is(DotProduct.SIMILARITY_FUNCTION));
-        assertThat(blockLoaderFunctionConfig.vector(), equalTo(new float[] { 1.0f, 2.0f, 3.0f }));
+        assertThat(blockLoaderFunctionConfig.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(blockLoaderFunctionConfig.vector(), equalTo(testCase.vector()));
 
         // Verify the filter condition matches the aggregate filter
         var filterFieldAttr = as(filterCondition.left(), FieldAttribute.class);
@@ -1375,14 +1377,15 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
     public void testVectorFunctionsUpdateIntermediateProjections() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
+        SimilarityFunctionTestCase testCase = SimilarityFunctionTestCase.random("dense_vector");
+        String query = String.format(Locale.ROOT, """
             from test_all
             | keep *
             | mv_expand keyword
-            | eval similarity = v_cosine(dense_vector, [0, 255, 255])
+            | eval similarity = %s
             | sort similarity desc, keyword asc
             | limit 1
-            """;
+            """, testCase.toQuery());
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), TEST_SEARCH_STATS);
 
@@ -1401,11 +1404,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         // Check replaced field attribute
         var fieldAttr = as(alias.child(), FieldAttribute.class);
         assertThat(fieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(fieldAttr.name(), startsWith("$$dense_vector$V_COSINE$"));
+        assertThat(fieldAttr.name(), startsWith(testCase.toFieldAttrName()));
         var field = as(fieldAttr.field(), FunctionEsField.class);
         var blockLoaderFunctionConfig = as(field.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(blockLoaderFunctionConfig.similarityFunction(), is(CosineSimilarity.SIMILARITY_FUNCTION));
-        assertThat(blockLoaderFunctionConfig.vector(), equalTo(new float[] { 0.0f, 255.0f, 255.0f }));
+        assertThat(blockLoaderFunctionConfig.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(blockLoaderFunctionConfig.vector(), equalTo(testCase.vector()));
 
         // MvExpand[keyword{f}#23,keyword{r}#32]
         var mvExpand = as(eval.child(), MvExpand.class);
@@ -1417,7 +1420,7 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         assertTrue(
             innerProject.projections()
                 .stream()
-                .anyMatch(p -> (p instanceof FieldAttribute fa) && fa.name().startsWith("$$dense_vector$V_COSINE$"))
+                .anyMatch(p -> (p instanceof FieldAttribute fa) && fa.name().startsWith(testCase.toFieldAttrName()))
         );
 
         // EsRelation[test_all][$$dense_vector$V_COSINE$33{f}#33, !alias_in..]
@@ -1427,80 +1430,135 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
 
     public void testVectorFunctionsWithDuplicateFunctions() {
         assumeTrue("requires similarity functions", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
-        String query = """
-            from test_all
-            | eval s1 = v_dot_product(dense_vector, [1.0, 2.0, 3.0]), s2 = v_dot_product(dense_vector, [1.0, 2.0, 3.0]) * 2 / 3
-            | eval s3 = v_dot_product(dense_vector, [1.0, 2.0, 3.0]) + 5, r1 = v_dot_product(dense_vector, [4.0, 5.0, 6.0])
-            | eval r2 = v_dot_product(dense_vector, [4.0, 5.0, 6.0]) + v_cosine(dense_vector, [4.0, 5.0, 6.0])
-            | keep s1, s2, r1, r2
-            """;
+        // Generate two random test cases - one for duplicate usage, one for the second set
+        SimilarityFunctionTestCase testCase1 = SimilarityFunctionTestCase.random("dense_vector");
+        SimilarityFunctionTestCase testCase2 = randomValueOtherThan(testCase1, () -> SimilarityFunctionTestCase.random("dense_vector"));
+        SimilarityFunctionTestCase testCase3 = randomValueOtherThanMany(
+            tc -> (tc.equals(testCase1) || tc.equals(testCase2)),
+            () -> SimilarityFunctionTestCase.random("dense_vector")
+        );
+
+        String query = String.format(
+            Locale.ROOT,
+            """
+                from test_all
+                | eval s1 = %s, s2 = %s * 2 / 3
+                | where %s + 5 + %s > 0
+                | eval r2 = %s + %s
+                | keep s1, s2, r2
+                """,
+            testCase1.toQuery(),
+            testCase1.toQuery(),
+            testCase1.toQuery(),
+            testCase2.toQuery(),
+            testCase2.toQuery(),
+            testCase3.toQuery()
+        );
 
         LogicalPlan plan = localPlan(plan(query, allTypesAnalyzer), TEST_SEARCH_STATS);
 
-        // EsqlProject[[s1{r}#5, s2{r}#8, r1{r}#14, r2{r}#18]]
+        // EsqlProject[[s1{r}#5, s2{r}#8, r2{r}#14]]
         var project = as(plan, EsqlProject.class);
-        assertThat(Expressions.names(project.projections()), contains("s1", "s2", "r1", "r2"));
+        assertThat(Expressions.names(project.projections()), contains("s1", "s2", "r2"));
 
-        // Eval with s1, s2, r1, r2
-        var eval = as(project.child(), Eval.class);
-        assertThat(eval.fields(), hasSize(4));
+        // Eval with s1, s2, r2
+        var evalS1 = as(project.child(), Eval.class);
+        assertThat(evalS1.fields(), hasSize(3));
 
         // Check s1 = $$dense_vector$V_DOT_PRODUCT$...
-        var s1Alias = as(eval.fields().getFirst(), Alias.class);
+        var s1Alias = as(evalS1.fields().getFirst(), Alias.class);
         assertThat(s1Alias.name(), equalTo("s1"));
         var s1FieldAttr = as(s1Alias.child(), FieldAttribute.class);
         assertThat(s1FieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(s1FieldAttr.name(), startsWith("$$dense_vector$V_DOT_PRODUCT$"));
+        assertThat(s1FieldAttr.name(), startsWith(testCase1.toFieldAttrName()));
         var s1Field = as(s1FieldAttr.field(), FunctionEsField.class);
         var s1Config = as(s1Field.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(s1Config.similarityFunction(), is(DotProduct.SIMILARITY_FUNCTION));
-        assertThat(s1Config.vector(), equalTo(new float[] { 1.0f, 2.0f, 3.0f }));
+        assertThat(s1Config.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(s1Config.vector(), equalTo(testCase1.vector()));
 
         // Check s2 = $$dense_vector$V_DOT_PRODUCT$1606418432 * 2 / 3 (same field as s1)
-        var s2Alias = as(eval.fields().get(1), Alias.class);
+        var s2Alias = as(evalS1.fields().get(1), Alias.class);
         assertThat(s2Alias.name(), equalTo("s2"));
         var s2Div = as(s2Alias.child(), Div.class);
         var s2Mul = as(s2Div.left(), Mul.class);
         var s2FieldAttr = as(s2Mul.left(), FieldAttribute.class);
         assertThat(s1FieldAttr, is(s2FieldAttr));
 
-        // Check r1 = $$dense_vector$V_DOT_PRODUCT$882900992 (vector [4.0, 5.0, 6.0])
-        var r1Alias = as(eval.fields().get(2), Alias.class);
-        assertThat(r1Alias.name(), equalTo("r1"));
-        var r1FieldAttr = as(r1Alias.child(), FieldAttribute.class);
-        assertThat(r1FieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(r1FieldAttr.name(), startsWith("$$dense_vector$V_DOT_PRODUCT$"));
-        var r1Field = as(r1FieldAttr.field(), FunctionEsField.class);
-        var r1Config = as(r1Field.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(r1Config.similarityFunction(), is(DotProduct.SIMILARITY_FUNCTION));
-        assertThat(r1Config.vector(), equalTo(new float[] { 4.0f, 5.0f, 6.0f }));
-
-        // Check r2 = $$dense_vector$V_DOT_PRODUCT$882900992 + $$dense_vector$V_COSINE$882900992
-        var r2Alias = as(eval.fields().get(3), Alias.class);
+        // Check r2 = $$dense_vector$V_L1NORM$... + $$dense_vector$V_HAMMING$... (two different fields)
+        var r2Alias = as(evalS1.fields().get(2), Alias.class);
         assertThat(r2Alias.name(), equalTo("r2"));
         var r2Add = as(r2Alias.child(), Add.class);
 
-        // Left side: DotProduct field (same as r1)
-        var r2DotProductFieldAttr = as(r2Add.left(), FieldAttribute.class);
-        assertThat(r2DotProductFieldAttr, is(r1FieldAttr));
+        // Left side should be testCase2 (L1NORM)
+        var r2LeftFieldAttr = as(r2Add.left(), FieldAttribute.class);
+        assertThat(r2LeftFieldAttr.fieldName().string(), equalTo("dense_vector"));
+        assertThat(r2LeftFieldAttr.name(), startsWith(testCase2.toFieldAttrName()));
+        var r2LeftField = as(r2LeftFieldAttr.field(), FunctionEsField.class);
+        var r2LeftConfig = as(r2LeftField.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
+        assertThat(r2LeftConfig.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(r2LeftConfig.vector(), equalTo(testCase2.vector()));
 
-        // Right side: CosineSimilarity field
-        var r2CosineFieldAttr = as(r2Add.right(), FieldAttribute.class);
-        assertThat(r2CosineFieldAttr.fieldName().string(), equalTo("dense_vector"));
-        assertThat(r2CosineFieldAttr.name(), startsWith("$$dense_vector$V_COSINE$"));
-        var r2CosineField = as(r2CosineFieldAttr.field(), FunctionEsField.class);
-        var r2CosineConfig = as(r2CosineField.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
-        assertThat(r2CosineConfig.similarityFunction(), is(CosineSimilarity.SIMILARITY_FUNCTION));
-        assertThat(r2CosineConfig.vector(), equalTo(new float[] { 4.0f, 5.0f, 6.0f }));
+        // Right side should be testCase3 (different HAMMING)
+        var r2RightFieldAttr = as(r2Add.right(), FieldAttribute.class);
+        assertThat(r2RightFieldAttr.fieldName().string(), equalTo("dense_vector"));
+        assertThat(r2RightFieldAttr.name(), startsWith(testCase3.toFieldAttrName()));
+        var r2RightField = as(r2RightFieldAttr.field(), FunctionEsField.class);
+        var r2RightConfig = as(r2RightField.functionConfig(), DenseVectorFieldMapper.VectorSimilarityFunctionConfig.class);
+        assertThat(r2RightConfig.similarityFunction(), instanceOf(DenseVectorFieldMapper.SimilarityFunction.class));
+        assertThat(r2RightConfig.vector(), equalTo(testCase3.vector()));
+
+        // Verify the two fields in r2 are different
+        assertThat(r2LeftFieldAttr, not(is(r2RightFieldAttr)));
 
         // Limit[1000[INTEGER],false,false]
-        var limit = as(eval.child(), Limit.class);
+        var limit = as(evalS1.child(), Limit.class);
+        assertThat(limit.limit(), instanceOf(Literal.class));
+        assertThat(((Literal) limit.limit()).value(), equalTo(1000));
 
-        // EsRelation[test_all][!alias_integer, boolean{f}#24, byte{f}#25, constant..]
-        var esRelation = as(limit.child(), EsRelation.class);
+        // Filter[testCase1 + 5 + testCase2 > 0] - Filter still has original function calls
+        var filter = as(limit.child(), Filter.class);
+        var greaterThan = as(filter.condition(), GreaterThan.class);
+        assertThat(greaterThan.right(), instanceOf(Literal.class));
+        assertThat(((Literal) greaterThan.right()).value(), equalTo(0));
+
+        var filterAdd1 = as(greaterThan.left(), Add.class);
+        var filterAdd2 = as(filterAdd1.left(), Add.class);
+
+        // Check the literal 5 in the filter
+        assertThat(filterAdd2.right(), instanceOf(Literal.class));
+        assertThat(((Literal) filterAdd2.right()).value(), equalTo(5));
+
+        // EsRelation[test_all] - should contain the pushed-down field attributes
+        var esRelation = as(filter.child(), EsRelation.class);
         assertTrue(esRelation.output().contains(s1FieldAttr));
-        assertTrue(esRelation.output().contains(r1FieldAttr));
-        assertTrue(esRelation.output().contains(r2CosineFieldAttr));
+        assertTrue(esRelation.output().contains(r2LeftFieldAttr));
+        assertTrue(esRelation.output().contains(r2RightFieldAttr));
+    }
+
+    private record SimilarityFunctionTestCase(String esqlFunction, String fieldName, float[] vector, String functionName) {
+
+        public String toQuery() {
+            String params = randomBoolean() ? fieldName + ", " + Arrays.toString(vector) : Arrays.toString(vector) + ", " + fieldName;
+            return esqlFunction + "(" + params + ")";
+        }
+
+        public String toFieldAttrName() {
+            return "$$" + fieldName + "$" + functionName;
+        }
+
+        public static SimilarityFunctionTestCase random(String fieldName) {
+            float[] vector = new float[] { randomFloat(), randomFloat(), randomFloat() };
+            // Only use DotProduct and CosineSimilarity as they have full pushdown support
+            // L1Norm, L2Norm, and Hamming are still in development
+            return switch (randomInt(4)) {
+                case 0 -> new SimilarityFunctionTestCase("v_dot_product", fieldName, vector, "V_DOT_PRODUCT");
+                case 1 -> new SimilarityFunctionTestCase("v_cosine", fieldName, vector, "V_COSINE");
+                case 2 -> new SimilarityFunctionTestCase("v_l1_norm", fieldName, vector, "V_L1NORM");
+                case 3 -> new SimilarityFunctionTestCase("v_l2_norm", fieldName, vector, "V_L2NORM");
+                case 4 -> new SimilarityFunctionTestCase("v_hamming", fieldName, vector, "V_HAMMING");
+                default -> throw new IllegalStateException("Unexpected value");
+            };
+        }
     }
 
     public void testLengthInEval() {
@@ -1577,7 +1635,6 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
     }
 
     public void testLengthInWhereAndEval() {
-        assumeFalse("fix me", true);
         assumeTrue("requires push", EsqlCapabilities.Cap.VECTOR_SIMILARITY_FUNCTIONS_PUSHDOWN.isEnabled());
         String query = """
             FROM test
@@ -1587,10 +1644,11 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
         LogicalPlan plan = localPlan(plan(query, analyzer), TEST_SEARCH_STATS);
 
         var project = as(plan, EsqlProject.class);
-        var limit = as(project.child(), Limit.class);
-        var eval = as(limit.child(), Eval.class);
-        var filter = as(eval.child(), Filter.class);
-        Attribute lAttr = assertLengthPushdown(as(filter.condition(), GreaterThan.class).left(), "last_name");
+        var eval = as(project.child(), Eval.class);
+        Attribute lAttr = assertLengthPushdown(as(eval.fields().getFirst(), Alias.class).child(), "last_name");
+        var limit = as(eval.child(), Limit.class);
+        var filter = as(limit.child(), Filter.class);
+        assertThat(as(filter.condition(), GreaterThan.class).left(), is(lAttr));
         var relation = as(filter.child(), EsRelation.class);
         assertThat(relation.output(), hasItem(lAttr));
     }
@@ -1606,48 +1664,53 @@ public class LocalLogicalPlanOptimizerTests extends ESTestCase {
             | EVAL a1 = LENGTH(last_name), a2 = LENGTH(last_name), a3 = LENGTH(last_name),
                    a4 = abs(LENGTH(last_name)) + a1 + LENGTH(first_name) * 3
             | WHERE a1 > 1 and LENGTH(last_name) > 1
-            | STATS l = SUM(LENGTH(last_name)) + AVG(a3)
+            | STATS l = SUM(LENGTH(last_name)) + AVG(a3) + SUM(LENGTH(first_name))
             """;
         LogicalPlan plan = localPlan(plan(query, analyzer), TEST_SEARCH_STATS);
 
         var project = as(plan, Project.class);
-        var eval1 = as(project.child(), Eval.class); // SUM + AVG
+        assertThat(Expressions.names(project.projections()), contains("l"));
+
+        // Eval - computes final aggregation result (SUM + AVG + SUM)
+        var eval1 = as(project.child(), Eval.class);
+        assertThat(eval1.fields(), hasSize(2));
+
+        // Limit[1000[INTEGER],false,false]
         var limit = as(eval1.child(), Limit.class);
+
+        // Aggregate with 4 aggregates: SUM for last_name, SUM and COUNT for AVG(a3), SUM for first_name
         var agg = as(limit.child(), Aggregate.class);
-        var eval2 = as(agg.child(), Eval.class); // Resolves the pushed LENGTH(last_name)
-        assertThat(eval2.fields(), hasSize(2));
+        assertThat(agg.aggregates(), hasSize(4));
 
-        Alias a3 = as(eval2.fields().getFirst(), Alias.class);
-        assertThat(a3.name(), equalTo("a3"));
-        Attribute a3Push = assertLengthPushdown(a3.child(), "last_name");
+        // Eval - pushdown fields: a3, LENGTH(last_name) for SUM, and LENGTH(first_name) for SUM
+        var evalPushdown = as(agg.child(), Eval.class);
+        assertThat(evalPushdown.fields(), hasSize(3));
+        Alias a3Alias = as(evalPushdown.fields().getFirst(), Alias.class);
+        assertThat(a3Alias.name(), equalTo("a3"));
+        Attribute lastNamePushDownAttr = assertLengthPushdown(a3Alias.child(), "last_name");
+        Alias lastNamePushdownAlias = as(evalPushdown.fields().get(1), Alias.class);
+        assertLengthPushdown(lastNamePushdownAlias.child(), "last_name");
+        Alias firstNamePushdownAlias = as(evalPushdown.fields().get(2), Alias.class);
+        Attribute firstNamePushDownAttr = assertLengthPushdown(firstNamePushdownAlias.child(), "first_name");
 
-        Alias sumInput = as(eval2.fields().getFirst(), Alias.class);
-        Attribute sumInputPush = assertLengthPushdown(sumInput.child(), "last_name");
+        // Verify aggregates reference the pushed down fields
+        var sumForLastName = as(as(agg.aggregates().get(0), Alias.class).child(), Sum.class);
+        assertThat(as(sumForLastName.field(), ReferenceAttribute.class).id(), equalTo(lastNamePushdownAlias.id()));
+        var sumForAvg = as(as(agg.aggregates().get(1), Alias.class).child(), Sum.class);
+        assertThat(as(sumForAvg.field(), ReferenceAttribute.class).id(), equalTo(a3Alias.id()));
+        var countForAvg = as(as(agg.aggregates().get(2), Alias.class).child(), Count.class);
+        assertThat(as(countForAvg.field(), ReferenceAttribute.class).id(), equalTo(a3Alias.id()));
+        var sumForFirstName = as(as(agg.aggregates().get(3), Alias.class).child(), Sum.class);
+        assertThat(as(sumForFirstName.field(), ReferenceAttribute.class).id(), equalTo(firstNamePushdownAlias.id()));
 
-        Filter filter = as(eval2.child(), Filter.class);
-        And and = as(filter.condition(), And.class);
-        GreaterThan left = as(and.left(), GreaterThan.class);
-        Expression a1 = left.left();
-        Attribute a1Push = assertLengthPushdown(a1, "last_name");
+        // Filter[LENGTH(last_name) > 1]
+        var filter = as(evalPushdown.child(), Filter.class);
+        assertLengthPushdown(as(filter.condition(), GreaterThan.class).left(), "last_name");
 
-        GreaterThan right = as(and.right(), GreaterThan.class);
-        Attribute filterPush = assertLengthPushdown(right.left(), "last_name");
-
-        EsRelation relation = as(filter.child(), EsRelation.class);
-        assertThat(relation.output(), hasItems(a3Push, sumInputPush, a1Push, filterPush));
-
-        assertThat(relation.output().stream().filter(a -> {
-            if (a instanceof FieldAttribute fa) {
-                if (fa.field() instanceof FunctionEsField fef) {
-                    return fef.functionConfig().function() == BlockLoaderFunctionConfig.Function.LENGTH;
-                }
-            }
-            return false;
-        }).toList(),
-            hasSize(
-                4 // Should be 1 - fix in https://github.com/elastic/elasticsearch/issues/137679
-            )
-        );
+        // EsRelation[test] - should contain the pushed-down field attribute
+        var relation = as(filter.child(), EsRelation.class);
+        assertThat(relation.output(), hasItem(lastNamePushDownAttr));
+        assertThat(relation.output(), hasItem(firstNamePushDownAttr));
     }
 
     public void testLengthInStatsTwice() {
